fixed some spacing

--- a/src/App.css
+++ b/src/App.css
@@ -384,10 +384,12 @@
   width: 100px;
   margin: 5px;
   filter: brightness(0.5);
+  object-fit: cover;
 }
 
 .unselectedPhoto{
   height: 100px;
   width: 100px;
   margin: 5px;
+  object-fit: cover;
 }
